--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "jshint": "^2.9.5"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp"
   },
   "author": "Anton Efimov",
   "license": "MIT",
